--- a/moutaintemplate/index.html
+++ b/moutaintemplate/index.html
@@ -76,9 +76,11 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
+            <p> 
             <br>
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+            Ethereum Magicians is a group of individuals working and contributing to the Ethereum and maintaining the forum. We aim to strengthen our role as a community moderator by organising meetups with Ethereum Core Developers and Researchers and wide Community during bigger Ethereum Conferences. Which have a very positive impact on the whole Ethereum Community, empowers Ethereum Core decision makers listen to community more and encouraging researchers to work closer with the community via Ethereum Magicians Forum.
+
+✨ ✨</p>
           </div>
        </div>
       </div>
